<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/Margin_main"
    android:layout_marginRight="@dimen/Margin_main"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:text="@string/AccessPoint"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin_bottom"/>

    <TextView
        android:text="@string/Coordinates"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin_button"/>

    <TextView
        android:id="@+id/tvCurrentAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/AccessPoint"/>

    <TextView
        android:id="@+id/tvCurrentDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/Coordinates"/>

    <TextView
        android:id="@+id/tvMeasureCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/Margin_24"
        android:text="@string/MeasureNumber"/>

    <Button
        android:id="@+id/bttStartScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartScan"
        android:layout_marginBottom="@dimen/Margin_main"/>

    <Button
        android:id="@+id/bttExportCSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExportCSV"/>

</LinearLayout>